# jam2025

./: .cfg  .gitignore  compilation-report.xml  err.txtki  pyproject.toml
jam2025/: __main__.py  launch.py  main.py  webcam.py
jam2025/core/: application.py  config.py  navigation.py  settings.py  void.py  webcam.py
jam2025/core/calibration/: calibration.py
jam2025/core/game/: bullet.py  character.py  constants.py  enemy.py  lux.py  score_tracker.py  wave.py
jam2025/core/ui/: bar.py  button.py  popup.py  slider.py  splashscreen.py  textbox.py
jam2025/data/: loading.py
jam2025/data/images/: settings plan.pdn
jam2025/data/shaders/: Bloom_p_downsample_fs.glsl  Bloom_p_fs.glsl  Bloom_p_upsample_fs.glsl
jam2025/lib/: anim.py  button.py  configure.py  fetch_cameras.py  frame.py  logging.py  noa.py  procedural_animator.py  settings.py  textbox.py  tobyscript.py  typing.py  utils.py  view_control.py  webcam.py
jam2025/tests/: animation_test.py  integration_test.py  lux_blob_test.py  player_test.py  textbox.py  ui_test_view.py  wave_test.py  webcam.py
jam2025/views/: __init__.py  calibration_step1.py  game_view.py  integration_test.py  player_test.py  select.py  wave_test.py
jam2025/views/calibration/: select_webcam.py
